--- a/client/src/assets/styles/Card.css
+++ b/client/src/assets/styles/Card.css
@@ -2,10 +2,13 @@
 
 .card{
     box-shadow: var(--box-shadow);
-    /* height: 200px; */
-    padding: 10px 15px;
+    background-color: var(--background-color);
+    min-height: 300px;
+    padding: 25px 20px;
     min-width: 350px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
+
 }
